--- a/bps/workstation.toml
+++ b/bps/workstation.toml
@@ -4,3 +4,8 @@
 packages = [
     { name = "@workstation-product-environment" }
 ]
+
+# XXX, it'd be nicer if the desktop environment groups put this into an RPM.
+customizations.files = [
+    { path = "/etc/sysconfig/livesys", data = "livesys_session=\"gnome\"" }
+]
