--- a/bps/workstation.toml
+++ b/bps/workstation.toml
@@ -15,6 +15,5 @@ customizations.files = [
 
 # XXX, it'd be nicer if the desktop environment groups put this into an RPM.
 # XXX, this is only applicable to the `live-installer` image type ...
-customizations.services = {
-    enabled = ["livesys", "livesys-late"]    
-}
+customizations.services.enabled = ["livesys", "livesys-late"]
+
