bytes are cheap

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ext/pungi-fedora"]
-	path = ext/pungi-fedora
+	path = external/pungi-fedora
 	url = https://pagure.io/pungi-fedora.git
 [submodule "ext/fedora-kickstarts"]
-	path = ext/fedora-kickstarts
+	path = external/fedora-kickstarts
 	url = https://pagure.io/fedora-kickstarts.git
