--- a/blueprints/workstation-live.toml
+++ b/blueprints/workstation-live.toml
@@ -1,6 +1,8 @@
 # An `osbuild-composer` blueprint for the Fedora workstation edition, based on
 # the `ext/fedora-kickstarts/fedora-live-workstation.ks` file.
 
+distro = "fedora-core-39"
+
 # These packages are installed upon the 'base' fedora as defined in
 # `osbuild-composer`.
 packages = [
