--- a/blueprints/kde-live.toml
+++ b/blueprints/kde-live.toml
@@ -31,22 +31,24 @@ packages = [
 ]
 
 # XXX, it'd be nicer if the desktop environment groups put this into an RPM.
-customizations.directories = [
-    { path = "/root/.config/gtk-3.0", ensure_parents = true },
-]
+# XXX, currently unsupported
+#customizations.directories = [
+#    { path = "/root/.config/gtk-3.0", ensure_parents = true },
+#]
 
 customizations.files = [
     # XXX, this is only applicable to the `live-installer` image type ...
-    { path = "/etc/sysconfig/livesys", data = "livesys_session=\"gnome\"" },
-    { path = "/root/.gtkrc-2.0", data = """\
-include "/usr/share/themes/Adwaita/gtk-2.0/gtkrc"
-include "/etc/gtk-2.0/gtkrc"
-gtk-theme-name="Adwaita"
-"""},
-    { path = "/root/.config/gtk-3.0/settings.ini", data = """\
-[Settings]
-gtk-theme-name = Adwaita
-"""}
+    { path = "/etc/sysconfig/livesys", data = "livesys_session=\"kde\"" },
+# XXX, currently unsupported
+#    { path = "/root/.gtkrc-2.0", data = """\
+#include "/usr/share/themes/Adwaita/gtk-2.0/gtkrc"
+#include "/etc/gtk-2.0/gtkrc"
+#gtk-theme-name="Adwaita"
+#"""},
+#    { path = "/root/.config/gtk-3.0/settings.ini", data = """\
+#[Settings]
+#gtk-theme-name = Adwaita
+#"""}
 ]
 
 # XXX, it'd be nicer if the desktop environment groups put this into an RPM.
