--- a/blueprints/i3-live-iso.toml
+++ b/blueprints/i3-live-iso.toml
@@ -1,6 +1,6 @@
 # An `osbuild-composer` blueprint for the Fedora XFCE spin, based on
-# the `ext/fedora-kickstarts/fedora-live-xfce.ks` file.
-name = "fedora-xfce-live"
+# the `ext/fedora-kickstarts/fedora-live-i3.ks` file.
+name = "fedora-i3-live-iso"
 
 # XXX this is the experimental 'core' distro in osbuild-composer/images
 distro = "fedora-core-39"
@@ -12,17 +12,17 @@ distro = "fedora-core-39"
 # XXX, for example an fedora-release-xfce-live that can depend on wget/these
 # XXX, the other groups?
 packages = [
-    # Desktop Environment
-    { name = "fedora-release-xfce" },
-    { name = "@xfce-desktop-environment" },
-    { name = "@xfce-apps" },
-    { name = "@xfce-extra-plugins" },
-    { name = "@xfce-media" },
-    { name = "@xfce-office" },
+    # Desktop environment
+    { name = "@i3-desktop-environment" },
+    { name = "feh" },
+    { name = "dex-autostart" },
+    { name = "thunar" },
+    { name = "gnome-keyring" },
+    { name = "@admin-tools" },
     { name = "wget" },
     { name = "system-config-printer" },
 
-    # Install Environment
+    # Install environment
     { name = "anaconda" },
     { name = "anaconda-install-env-deps" },
     { name = "anaconda-live" },
@@ -33,9 +33,9 @@ packages = [
 # XXX, it'd be nicer if the desktop environment groups put this into an RPM.
 customizations.files = [
     # XXX, this is only applicable to the `live-installer` image type ...
-    { path = "/etc/sysconfig/livesys", data = "livesys_session=\"xfce\"" },
+    { path = "/etc/sysconfig/livesys", data = "livesys_session=\"i3\"" },
 
-    { path = "/etc/sysconfig/desktop", data = "PREFERRED=/usr/bin/startxfce4\nDISPLAYMANAGER=/usr/bin/lightdm" }
+    { path = "/etc/sysconfig/desktop", data = "PREFERRED=/usr/bin/i3\nDISPLAYMANAGER=/usr/bin/lightdm" }
 ]
 
 # XXX, it'd be nicer if the desktop environment groups put this into an RPM.
