--- a/blueprints/workstation-live-iso.toml
+++ b/blueprints/workstation-live-iso.toml
@@ -1,6 +1,6 @@
 # An `osbuild-composer` blueprint for the Fedora workstation edition, based on
 # the `ext/fedora-kickstarts/fedora-live-workstation.ks` file.
-name = "fedora-workstation-live"
+name = "fedora-workstation-live-iso"
 
 # XXX this is the experimental 'core' distro in osbuild-composer/images
 distro = "fedora-core-39"
