enable filesystem customizations

--- a/blueprints/kde-live-iso.toml
+++ b/blueprints/kde-live-iso.toml
@@ -30,27 +30,22 @@ packages = [
     { name = "glibc-all-langpacks" },
 ]
 
-# XXX, it'd be nicer if the desktop environment groups put this into an RPM.
-# XXX, currently unsupported
-#customizations.directories = [
-#    { path = "/root/.config/gtk-3.0", ensure_parents = true },
-#]
+customizations.directories = [
+    { path = "/root/.config/gtk-3.0", ensure_parents = true },
+]
 
 customizations.files = [
     # XXX, this is only applicable to the `live-installer` image type ...
     { path = "/etc/sysconfig/livesys", data = "livesys_session=\"kde\"" },
-# XXX, currently unsupported
-#    { path = "/root/.gtkrc-2.0", data = """\
-#include "/usr/share/themes/Adwaita/gtk-2.0/gtkrc"
-#include "/etc/gtk-2.0/gtkrc"
-#gtk-theme-name="Adwaita"
-#"""},
-#    { path = "/root/.config/gtk-3.0/settings.ini", data = """\
-#[Settings]
-#gtk-theme-name = Adwaita
-#"""}
+ XXX, currently unsupported
+    { path = "/root/.gtkrc-2.0", data = """\
+include "/usr/share/themes/Adwaita/gtk-2.0/gtkrc"
+include "/etc/gtk-2.0/gtkrc"
+gtk-theme-name="Adwaita"
+"""},
+    { path = "/root/.config/gtk-3.0/settings.ini", data = """\
+[Settings]
+gtk-theme-name = Adwaita
+"""}
 ]
-
-# XXX, it'd be nicer if the desktop environment groups put this into an RPM.
-# XXX, this is only applicable to the `live-installer` image type ...
 customizations.services.enabled = ["livesys", "livesys-late"]
